--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap-vue": "^1.0.0-beta.9",
     "highcharts": "^6.0.2",
     "install": "^0.10.1",
+    "moment": "^2.19.1",
     "npm": "^5.5.1",
     "vue": "^2.5.2",
     "vue-highcharts": "0.0.10",
