--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "npm": "^5.5.1",
     "vue": "^2.5.2",
     "vue-highcharts": "0.0.10",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-slider-component": "^2.4.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
