--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.19.1",
     "npm": "^5.5.1",
     "vue": "^2.5.2",
+    "vue-cookies": "^1.5.4",
     "vue-highcharts": "0.0.10",
     "vue-router": "^3.0.1",
     "vue-slider-component": "^2.4.5"
