--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "vue-cookies": "^1.5.4",
     "vue-highcharts": "0.0.10",
     "vue-router": "^3.0.1",
-    "vue-slider-component": "^2.4.5"
+    "vue-slider-component": "^2.4.5",
+    "vue2-google-maps": "^0.9.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
